implemento solicitudes de moficacion